--- a/README
+++ b/README
@@ -16,7 +16,7 @@
 ## 💻 Installation
 
 ```bash
-git clone https://github.com/[yourusername]/aquamark-pro.git
+git clone https://github.com/Dabeey/AquaMark-Pro.git
 cd aquamark-pro
 pip install -r requirements.txt
 python aquamark_pro.py
